--- a/lab_work/lab_work/lab_work.vcxproj.filters
+++ b/lab_work/lab_work/lab_work.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="lab_work.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="medicine.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="medicine.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
