--- a/lab_work/lab_work/lab_work.vcxproj.filters
+++ b/lab_work/lab_work/lab_work.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="lab_work.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="medicine.cpp">
